feat: 7.3 add get manager profile endpoint
