# api/manager.v1.swagger.yml
@@ -104,6 +104,19 @@ paths:
               schema:
                 $ref: "#/components/schemas/CloseChatResponse"
 
+  /getManagerProfile:
+    post:
+      description: Get manager info
+      parameters:
+        - $ref: "#/components/parameters/XRequestIDHeader"
+      responses:
+        '200':
+          description: manager info
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetManagerProfileResponse"
+
   /login:
     post:
       security: [ ]
@@ -331,7 +344,14 @@ components:
         error:
           $ref: "#/components/schemas/Error"
 
-    UserProfile:
+    GetManagerProfileResponse:
+      properties:
+        data:
+          $ref: "#/components/schemas/ManagerProfile"
+        error:
+          $ref: "#/components/schemas/Error"
+
+    ManagerProfile:
       required: [ id, firstName, lastName ]
       properties:
         id:
@@ -366,4 +386,4 @@ components:
         token:
           type: string
         user:
-          $ref: "#/components/schemas/UserProfile"
+          $ref: "#/components/schemas/ManagerProfile"
